changing absolute path, to relative path

--- a/simulation/ipy_notebooks/encoder_validation_orange.ipynb
+++ b/simulation/ipy_notebooks/encoder_validation_orange.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,17 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "_txt_pth = r\"C:\\Users\\CMC\\Documents\\openposelibs\\pose\\armbo\\simulation\\ipy_notebooks\\test_data\\omni_9dof_april_3_2023\\orange_2500_april_3_2023_t1\\imu01.csv\"\n",
-    "_mocap_pth = r\"C:\\Users\\CMC\\Documents\\openposelibs\\pose\\armbo\\simulation\\ipy_notebooks\\test_data\\omni_9dof_april_3_2023\\orange\\orange_2500_april_3_2023_t1.csv\""
+    "_txt_pth = r\"test_data\\omni_9dof_april_3_2023\\orange_2500_april_3_2023_t1\\imu01.csv\"\n",
+    "_mocap_pth = r\"test_data\\omni_9dof_april_3_2023\\orange\\orange_2500_april_3_2023_t1.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "0.00999999999999801"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "[2437 rows x 6 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,16 +264,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1826/1826 [00:02<00:00, 788.15it/s] \n",
-      "100%|██████████| 1826/1826 [00:00<00:00, 457678.92it/s]\n",
-      "100%|██████████| 1826/1826 [00:00<00:00, 130760.94it/s]\n"
+      "100%|██████████| 1826/1826 [00:01<00:00, 1014.75it/s]\n",
+      "100%|██████████| 1826/1826 [00:00<00:00, 134338.97it/s]\n",
+      "100%|██████████| 1826/1826 [00:00<00:00, 59379.28it/s]\n"
      ]
     }
    ],
@@ -319,16 +319,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2c6f3f32748>"
+       "<matplotlib.legend.Legend at 0x2565fa1fbc8>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -350,16 +350,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2c6f3a39f08>"
+       "<matplotlib.legend.Legend at 0x2565fb03ec8>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -382,7 +382,7 @@
     "theta_df[\"diff\"].fillna(0, inplace=True)\n",
     "# integrate angle\n",
     "df, _ = get_orientation(theta_df, \"diff\")\n",
-    "mocap_orientation = integrate.cumtrapz(theta_df[\"diff\"], theta_df.time.diff(), initial=0)\n",
+    "mocap_orientation = integrate.cumtrapz(theta_df[\"diff\"], theta_df.time, initial=0)\n",
     "# mocap_orientation = theta_df[\"diff\"].cumsum()*0.02\n",
     "\n",
     "plt.plot(df[\"time\"], df[\"theta\"], label=\"y\")\n",
@@ -392,16 +392,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2c6f417a748>"
+       "<matplotlib.legend.Legend at 0x2565f94ef88>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -426,16 +426,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2c6f409cac8>"
+       "<matplotlib.legend.Legend at 0x2565f577b08>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "48.76250497512865"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.11"
   },
   "orig_nbformat": 4
  },
