new notebooks for linearalg testing

--- a/simulation/ipy_notebooks/encoder_validation_orange.ipynb
+++ b/simulation/ipy_notebooks/encoder_validation_orange.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "0.00999999999999801"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "[5252 rows x 6 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,16 +279,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4772/4772 [00:02<00:00, 2161.14it/s]\n",
-      "100%|██████████| 4772/4772 [00:00<00:00, 434716.53it/s]\n",
-      "100%|██████████| 4772/4772 [00:00<00:00, 129324.85it/s]\n"
+      "100%|██████████| 4772/4772 [00:02<00:00, 1969.78it/s]\n",
+      "100%|██████████| 4772/4772 [00:00<00:00, 478443.82it/s]\n",
+      "100%|██████████| 4772/4772 [00:00<00:00, 132808.82it/s]\n"
      ]
     }
    ],
@@ -339,16 +339,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x20eaadc3bc8>"
+       "<matplotlib.legend.Legend at 0x1f303f42508>"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -373,16 +373,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x20eaabd41c8>"
+       "<matplotlib.legend.Legend at 0x1f304a40dc8>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -415,16 +415,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x20eaa9f11c8>"
+       "<matplotlib.legend.Legend at 0x1f304120b08>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -449,16 +449,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x20eaa25f5c8>"
+       "<matplotlib.legend.Legend at 0x1f304164e48>"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -484,16 +484,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "72.37264718666574"
+       "66.75468999806071"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
