--- a/imu/calibration_using_orientation.ipynb
+++ b/imu/calibration_using_orientation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,16 +27,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\imu_calib_raw_april_27_2023'"
+       "'c:\\\\Users\\\\Sujith\\\\Documents\\\\Projects\\\\armbo\\\\recording_programs\\\\test_data\\\\imu_calib_raw_april_27_2023'"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,14 +62,14 @@
     "if not os.path.exists(_base_save_pth):\n",
     "    os.mkdir(_base_save_pth)\n",
     "\n",
-    "_save_pth = os.path.join(_base_save_pth, \"calib1.txt\")\n",
+    "_save_pth = os.path.join(_base_save_pth, \"calib2.txt\")\n",
     "_save_file = open(_save_pth, \"w\", newline='')\n",
-    "_csv_writer = csv.writer(_save_file, delimiter=\" \")"
+    "_csv_writer = csv.writer(_save_file, delimiter=\",\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
