cam and sensor recordings

--- a/ipy_notebooks/calibration_singlecam.ipynb
+++ b/ipy_notebooks/calibration_singlecam.ipynb
@@ -8,14 +8,6 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "import time\n",
-    "import datetime\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import msgpack as mp\n",
-    "import msgpack_numpy as mpn\n",
-    "import cv2\n",
     "sys.path.append('..')\n",
     "from support.camera_calibration import calibrate_camera_from_file"
    ]
@@ -28,7 +20,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\cam_and_sensor_feb_1_2023_5cm\\\\calibration_30fps_00\\\\webcam_color.msgpack'"
+       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\omni_cam_9d0f_may_8_2023\\\\calibration_00\\\\webcam_color.msgpack'"
       ]
      },
      "execution_count": 2,
@@ -39,8 +31,8 @@
    "source": [
     "_pth = os.getcwd()\n",
     "_pth = os.path.dirname(_pth)\n",
-    "_parent_folder = \"cam_and_sensor_feb_1_2023_5cm\"\n",
-    "_folder_name = \"calibration_30fps_00\"\n",
+    "_parent_folder = \"omni_cam_9d0f_may_8_2023\"\n",
+    "_folder_name = \"calibration_00\"\n",
     "\n",
     "_webcam_pth = os.path.join(_pth,\"recording_programs\",\"test_data\",_parent_folder, _folder_name,\"webcam_color.msgpack\")\n",
     "_webcam_ts = os.path.join(_pth,\"recording_programs\", \"test_data\",_parent_folder,_folder_name,\"webcam_timestamp.msgpack\")\n",
@@ -56,7 +48,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1441/1441 [00:01<00:00, 730.50it/s] \n"
+      "100%|██████████| 1187/1187 [00:01<00:00, 964.28it/s]\n"
      ]
     },
     {
@@ -64,14 +56,15 @@
      "output_type": "stream",
      "text": [
       "Found [ 0  1  2  3  4  5  6  7  8  9 10 11] unique markers\n",
-      "corners_list:  (1736, 1, 4, 2)\n",
+      "corners_list:  (1745, 1, 4, 2)\n",
       "Calibrating camera .... Please wait...\n",
       " Camera matrix is \n",
-      " [[860.92105025   0.         363.84758892]\n",
-      " [  0.         862.8938193  277.67530785]\n",
+      " [[880.19523452   0.         358.2789884 ]\n",
+      " [  0.         881.87061144 242.70902376]\n",
       " [  0.           0.           1.        ]] \n",
       " And is stored in AR_CALIBRATION.msgpack file along with distortion coefficients : \n",
-      " [[ 0.10193365 -0.70217657  0.0113397   0.00243252  0.3462907 ]]\n"
+      " [[ 1.24325941e-01 -1.20330000e-01 -2.99461015e-03 -1.15851300e-03\n",
+      "  -3.99283638e+00]]\n"
      ]
     }
    ],
