--- a/ipy_notebooks/coordinate_analysis_multisensor.ipynb
+++ b/ipy_notebooks/coordinate_analysis_multisensor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,14 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5860/5860 [00:01<00:00, 5232.08it/s]\n"
+      "100%|██████████| 5860/5860 [00:04<00:00, 1430.42it/s]\n"
      ]
     }
    ],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,13 +283,12 @@
     "r_mat = []\n",
     "for i in range(len(ar_angle)):\n",
     "    _tmp = ar_angle[[\"rx\", \"ry\", \"rz\"]][i].to_numpy()\n",
-    "    r_mat.append(cv2.Rodrigues(_tmp)[0])\n",
-    "\n"
+    "    r_mat.append(cv2.Rodrigues(_tmp)[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,16 +316,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5860/5860 [00:06<00:00, 894.71it/s] \n",
-      "100%|██████████| 5860/5860 [00:00<00:00, 450801.90it/s]\n",
-      "100%|██████████| 5860/5860 [00:00<00:00, 112695.83it/s]\n"
+      "100%|██████████| 5860/5860 [00:06<00:00, 886.55it/s] \n",
+      "100%|██████████| 5860/5860 [00:00<00:00, 87465.91it/s]\n",
+      "100%|██████████| 5860/5860 [00:00<00:00, 124580.55it/s]\n"
      ]
     }
    ],
@@ -372,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,14 +457,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0it [00:00, ?it/s]\n"
+     "ename": "NameError",
+     "evalue": "name 'cam_rotmat' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_13888\\1733314611.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcam_rotmat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0m_rm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcam_rotmat\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mcam_rotmat\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'cam_rotmat' is not defined"
      ]
     }
    ],
@@ -484,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
