--- a/ipy_notebooks/create_video_for_all_folders.ipynb
+++ b/ipy_notebooks/create_video_for_all_folders.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
      "output_type": "stream",
      "text": [
       "File does not exist, creating list of folders\n",
-      "['sk36_30_forward_slow_00', 'sk36_30_forward_slow_01', 'sk36_30_forward_slow_02', 'sk36_30_forward_slow_03', 'sk36_30_random_00', 'sk36_30_random_01', 'sk36_30_sideways_00', 'sk36_30_sideways_01']\n"
+      "['sk36']\n"
      ]
     }
    ],
@@ -44,7 +44,8 @@
     "    # Get all folders in the parent folder and save them to a text file\n",
     "    _folder_list = os.listdir(os.path.join(_base_pth, _parent_folder))\n",
     "    \n",
-    "_folder_list = _folder_list[2:]\n",
+    "# _folder_list = _folder_list[2:]\n",
+    "_folder_list = [_folder_list[1]]\n",
     "print(_folder_list)"
    ]
   },
