--- a/simulation/ipy_notebooks/omniwheel_err_minimization_imu.ipynb
+++ b/simulation/ipy_notebooks/omniwheel_err_minimization_imu.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\omni_cam_9d0f_may_8_2023'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,16 +78,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e4a73a6b00>"
+       "<matplotlib.legend.Legend at 0x16088608070>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,16 +131,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e4a6c8e080>"
+       "<matplotlib.legend.Legend at 0x160887d6fe0>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -164,16 +164,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e4a7210100>"
+       "<matplotlib.legend.Legend at 0x1608a8eae30>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,16 +205,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e4a7247fd0>"
+       "<matplotlib.legend.Legend at 0x160887df970>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,14 +304,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5860/5860 [00:01<00:00, 5091.22it/s]\n"
+      "100%|██████████| 5860/5860 [00:07<00:00, 809.64it/s] \n"
      ]
     }
    ],
@@ -338,16 +338,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5860/5860 [00:02<00:00, 2092.08it/s]\n",
-      "100%|██████████| 5860/5860 [00:00<00:00, 418544.74it/s]\n",
-      "100%|██████████| 5860/5860 [00:00<00:00, 177424.54it/s]\n"
+      "100%|██████████| 5860/5860 [00:06<00:00, 968.78it/s] \n",
+      "100%|██████████| 5860/5860 [00:00<00:00, 202073.64it/s]\n",
+      "100%|██████████| 5860/5860 [00:00<00:00, 183134.18it/s]\n"
      ]
     }
    ],
@@ -401,14 +401,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5860/5860 [00:02<00:00, 2515.55it/s]\n"
+      "100%|██████████| 5860/5860 [00:02<00:00, 2560.07it/s]\n"
      ]
     }
    ],
@@ -443,16 +443,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e4b2100700>"
+       "<matplotlib.legend.Legend at 0x1608c7f2b60>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -475,16 +475,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e4b0cbf130>"
+       "<matplotlib.legend.Legend at 0x1608f114fa0>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -508,16 +508,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e4ad69aec0>"
+       "<matplotlib.legend.Legend at 0x1608c4cac50>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -545,16 +545,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e4ad777a90>"
+       "<matplotlib.legend.Legend at 0x1608c563f40>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -684,16 +684,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e4ada5a5f0>"
+       "<matplotlib.legend.Legend at 0x1608c5f0b50>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -717,16 +717,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e4b1d2a620>"
+       "<matplotlib.legend.Legend at 0x1608c49ba90>"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -759,14 +759,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5860/5860 [00:02<00:00, 2383.50it/s]\n"
+      "100%|██████████| 5860/5860 [00:02<00:00, 2548.94it/s]\n"
      ]
     }
    ],
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,14 +867,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5340/5340 [00:00<00:00, 27808.33it/s]\n"
+      "100%|██████████| 5340/5340 [00:00<00:00, 27813.27it/s]\n"
      ]
     }
    ],
@@ -894,16 +894,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1e4ae168520>]"
+       "[<matplotlib.lines.Line2D at 0x1608c102aa0>]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -924,16 +924,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e4ad7fb850>"
+       "<matplotlib.legend.Legend at 0x1608c048940>"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -957,16 +957,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e4af8b7310>"
+       "<matplotlib.legend.Legend at 0x1608c081750>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1010,16 +1010,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e4a7442170>"
+       "<matplotlib.legend.Legend at 0x1608ca3b430>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1045,16 +1045,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e4a72274c0>"
+       "<matplotlib.legend.Legend at 0x1608c099090>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1078,16 +1078,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e4a75de4d0>"
+       "<matplotlib.legend.Legend at 0x1608eca4430>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1139,16 +1139,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1e4b1f62d70>]"
+       "[<matplotlib.lines.Line2D at 0x1608ec430a0>]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1170,16 +1170,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1e4b1ecd870>]"
+       "[<matplotlib.lines.Line2D at 0x1608c7bfbe0>]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1209,16 +1209,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e4af8b7280>"
+       "<matplotlib.legend.Legend at 0x1608be64460>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1247,16 +1247,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e4af8beda0>"
+       "<matplotlib.legend.Legend at 0x1608c759120>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
