--- a/simulation/ipy_notebooks/omniwheel_imu_aruco.ipynb
+++ b/simulation/ipy_notebooks/omniwheel_imu_aruco.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\omni_cam_9d0f_may_8_2023'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,16 +108,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1aed473bbe0>"
+       "<matplotlib.legend.Legend at 0x1840e4010c0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,14 +321,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5860/5860 [00:05<00:00, 1145.70it/s]\n"
+      "100%|██████████| 5860/5860 [00:01<00:00, 3234.98it/s]\n"
      ]
     }
    ],
@@ -355,16 +355,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5860/5860 [00:06<00:00, 898.29it/s] \n",
-      "100%|██████████| 5860/5860 [00:00<00:00, 418551.87it/s]\n",
-      "100%|██████████| 5860/5860 [00:00<00:00, 182941.98it/s]\n"
+      "100%|██████████| 5860/5860 [00:02<00:00, 2222.22it/s]\n",
+      "100%|██████████| 5860/5860 [00:00<00:00, 450744.03it/s]\n",
+      "100%|██████████| 5860/5860 [00:00<00:00, 182853.52it/s]\n"
      ]
     }
    ],
@@ -418,14 +418,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5860/5860 [00:02<00:00, 2445.77it/s]\n"
+      "100%|██████████| 5860/5860 [00:02<00:00, 2512.30it/s]\n"
      ]
     }
    ],
@@ -460,16 +460,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2133be2c940>"
+       "<matplotlib.legend.Legend at 0x1840e37afb0>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -492,16 +492,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x213389be620>"
+       "<matplotlib.legend.Legend at 0x1840e0b6740>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -525,16 +525,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x213389be500>"
+       "<matplotlib.legend.Legend at 0x1840d201db0>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,35 +649,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['e_t_av', 'e_rr_av', 'e_rl_av']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "newdf, _ = get_dir_vel2(df, ang_col, mocap_ang= -np.deg2rad(_imu_df[\"ang_z\"]))\n",
-    "newdf, _ = get_position2(newdf)\n",
-    "newdf, _ = get_orientation2(newdf)"
+    "# newdf, _ = get_dir_vel2(df, ang_col, mocap_ang= -np.deg2rad(_imu_df[\"ang_z\"]))\n",
+    "# newdf, _ = get_position2(newdf)\n",
+    "# newdf, _ = get_orientation2(newdf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2133b09a560>"
+       "<matplotlib.legend.Legend at 0x1840f352b90>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -702,16 +694,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x21339dc3910>"
+       "<matplotlib.legend.Legend at 0x1840c88b700>"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -737,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,16 +771,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x213377d4c70>]"
+       "[<matplotlib.lines.Line2D at 0x1840cbdcb50>]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -804,7 +796,7 @@
     }
    ],
    "source": [
-    "plt.plot(w_df[\"time\"], ar_df[\"x\"], label=\"mocap _x\")"
+    "plt.plot(w_df[\"time\"], ar_df[\"x\"], label=\"mocap _x\")\n"
    ]
   },
   {
@@ -817,14 +809,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5860/5860 [00:02<00:00, 2544.85it/s]\n"
+      "  0%|          | 0/5860 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5860/5860 [00:02<00:00, 2638.45it/s]\n"
      ]
     }
    ],
@@ -859,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,16 +907,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x213399d92d0>"
+       "<matplotlib.legend.Legend at 0x1840e01e740>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -941,16 +940,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x21339a22110>"
+       "<matplotlib.legend.Legend at 0x1840c876410>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -974,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,16 +992,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x213499bd540>]"
+       "[<matplotlib.lines.Line2D at 0x1840df07460>]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1023,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1158,7 @@
        "[1963 rows x 3 columns]"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
